src/objects/vlocity_ins__InventoryItem__c.object
<CustomObject>
    <description>Represents item instances that are not generally tied to any specific customer and which can be tracked in inventory. Useful for equipment or devices before they are purchased by a customer or that are never purchased by a customer. Examples include inventoried SIM cards, networking equipment, set-top boxes and meters.</description>
    <fields>
        <fullName>vlocity_ins__AccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inventory Items (Account)</relationshipLabel>
        <relationshipName>Inventory_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Address__c</fullName>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__BillingAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the account responsible for paying for the item.</description>
        <label>BillingAccountId</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inventory Items (BillingAccountId)</relationshipLabel>
        <relationshipName>Inventory_Items2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__JSONAttribute__c</fullName>
        <label>JSONAttribute</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LineNumber__c</fullName>
        <description>Line Number</description>
        <label>Line Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PremiseId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Installed Premise</label>
        <referenceTo>vlocity_ins__Premises__c</referenceTo>
        <relationshipLabel>Inventory Items</relationshipLabel>
        <relationshipName>InventoryItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProductId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Inventory Items</relationshipLabel>
        <relationshipName>InventoryItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ProvisioningStatus__c</fullName>
        <description>The current provisioning, or fulfillment, status of the inventory Item with values such as New, Active, Changed or Deleted.</description>
        <label>ProvisioningStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__QualificationExpirationDate__c</fullName>
        <label>Qualification Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SerialNumber__c</fullName>
        <externalId>true</externalId>
        <label>Serial Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ServiceAccountId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the account that identifies the service location or subscriber that is the user of the service.</description>
        <label>ServiceAccountId</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Inventory Items (ServiceAccountId)</relationshipLabel>
        <relationshipName>Inventory_Items1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ServicePointId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Installed Service Point</label>
        <referenceTo>vlocity_ins__ServicePoint__c</referenceTo>
        <relationshipLabel>Inventory Items</relationshipLabel>
        <relationshipName>InventoryItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Inventory Item</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Inventory Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Inventory Items</pluralLabel>
    <recordTypes>
        <fullName>vlocity_ins__InventoryItem</fullName>
        <active>true</active>
        <label>Inventory Item</label>
    </recordTypes>
    <recordTypes>
        <fullName>vlocity_ins__ServiceQualificationResult</fullName>
        <active>true</active>
        <label>Service Qualification Result</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>